--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
 <nav>
   <%= link_to "Posts", posts_path %>
   <%= link_to "Ratings", ratings_path %>
+  <%= link_to 'Users', users_path %>
+  <% if current_user %>
+    Signed in as <%= current_user.username %>
+    <%= link_to 'logout', logout_path %>
+  <% else %>
+    <%= link_to 'Sign in', login_path %>
+    <%= link_to 'Register', signup_path %>
+  <% end %>
 </nav>
 
 <%= yield %>
