--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,9 @@
     <tr>
       <th>Title</th>
       <th>Content</th>
+      <th>Made by</th>
       <th>Added at</th>
+      <th>Rating</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +19,9 @@
       <tr>
         <td><%= link_to post.title, post %></td>
         <td><%= post.formatted_content %></td>
-        <td><%= post.created_at %></td>
+        <td><%= link_to post.user.username, post.user %></td>
+        <td><%= time_ago_in_words(post.created_at) %> ago</td>
+        <td><%= post.average_rating %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -26,5 +30,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Post', new_post_path %>
+<% if current_user %>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
